header and footer - 03.09.2016

--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -2,5 +2,88 @@
 <html>
 	<head>
 		<title>Reserve the World</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width , initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="styles/review.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	</head>
+
+	<body>
+		<!--#####################################################################################################################-->
+
+		<header>
+			<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+				<div class="container topnav">
+					<div class="head">
+						<div>
+							<img src="pics/logo.svg" type="img-circle" alt="logo" width="50px" height="50px">
+							<h1>Reserve the World</h1>
+						</div>
+						<p>Worlds Largest Transport Reservation System</p>
+					</div>
+					<div class="span3">
+						<nav class="navbar basic-nav">
+							<a href="#">Login</a> | 
+ 							<a href="#">SignUp</a> |
+							<a href="https://accounts.google.com">Google+</a>
+						</nav>
+					</div>
+				</div>
+			</nav>	
+		</header>
+		
+		<!--#####################################################################################################################-->
+		
+		<main>
+			<img src="pics/hello.jpg" width="1024px" height="650px">
+		</main>
+		
+		<!--#####################################################################################################################-->
+		
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<ul class="list-inline">
+							<li>
+								<a href="index.html">Home</a>
+							</li>
+							<li class="footer-menu-divider">&sdot;</li>
+							<li>
+								<a href="#">Destinations</a>
+							</li>
+							<li class="footer-menu-divider">&sdot;</li>
+							<li>
+								<a href="#">About Us</a>
+							</li>
+							<li class="footer-menu-divider">&sdot;</li>
+							<li>
+								<a href="#">Carriers</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<address class="leftFloat">
+					<strong>Reserve the World Pvt LTD</strong><br>
+					1005 World Trade Centre<br>
+					Colombo 01<br>
+					Sri Lanka<br>
+					<abbr title="Phone Number">P : </abbr><a href="tel:+94112654563">(011) 2654563</a>
+				</address>
+
+				<address class="rightFloat">
+					<strong>John Occune</strong><br>
+					CEO<br>
+					Reserve the World<br>
+					Sri Lanka<br>
+					<a href="mailto:johnoccune@rtw.com">johnoccune@rwt.com</a>
+				</address>
+			</div>
+		</footer>
+
+		<!--#####################################################################################################################-->
+		
+		<script type="text/javascript" src="scripts/jquery-3.1.0.min.js"></script>
+		<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	</body>
 </html>
