--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -1,89 +1,174 @@
+
+<!DOCTYPE html>
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Reserve the World</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width , initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="styles/review.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+		<meta name="viewport" content="width=device-width ,initial-scale=1">
+		<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="styles/review.css" rel="stylesheet">
+		<title>Reserve the World</title>
 	</head>
-
 	<body>
-		<!--#####################################################################################################################-->
-
+	<!--###########################################-->
 		<header>
 			<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
 				<div class="container topnav">
-					<div class="head">
-						<div>
-							<img src="pics/logo.svg" type="img-circle" alt="logo" width="50px" height="50px">
-							<h1>Reserve the World</h1>
-						</div>
-						<p>Worlds Largest Transport Reservation System</p>
+				<!--header of the Navigation bar-->
+					<div class="navbar-header">
+						<a class="navbar-brand topnav" href="index.html">
+							<div class="row">
+								<img src="pics/logo.svg" alt="logo" width="35px" height="30px"> Reserve the World
+							</div>
+						</a>						
 					</div>
-					<div class="span3">
-						<nav class="navbar basic-nav">
-							<a href="#">Login</a> | 
- 							<a href="#">SignUp</a> |
-							<a href="https://accounts.google.com">Google+</a>
-						</nav>
-					</div>
-				</div>
-			</nav>	
-		</header>
-		
-		<!--#####################################################################################################################-->
-		
-		<main>
-			<img src="pics/hello.jpg" width="1024px" height="650px">
-		</main>
-		
-		<!--#####################################################################################################################-->
-		
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<ul class="list-inline">
+				<!--next elements of the navigation bar-->
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
 							<li>
-								<a href="index.html">Home</a>
+								<a href="#">
+									Destinations
+								</a>
 							</li>
-							<li class="footer-menu-divider">&sdot;</li>
 							<li>
-								<a href="#">Destinations</a>
+								<a href="#">
+									About Us
+								</a>
 							</li>
-							<li class="footer-menu-divider">&sdot;</li>
 							<li>
-								<a href="#">About Us</a>
+								<a href="#"><span class="glyphicon glyphicon-phone"></span> Contact Us</a>
 							</li>
-							<li class="footer-menu-divider">&sdot;</li>
 							<li>
-								<a href="#">Carriers</a>
+								<a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+							</li>
+							<li>
+								<a href="#"><span class="glyphicon glyphicon-user"></span> Signup</a>
+							</li>
+							<li>
+								<a href="accounts.google.com">
+									Google+
+								</a>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<address class="leftFloat">
-					<strong>Reserve the World Pvt LTD</strong><br>
-					1005 World Trade Centre<br>
-					Colombo 01<br>
-					Sri Lanka<br>
-					<abbr title="Phone Number">P : </abbr><a href="tel:+94112654563">(011) 2654563</a>
-				</address>
+			</nav>
+		</header>
+	<!--############################################-->
+		<main>
+			<div class="container">
+				<img src="pics/hello.jpg" width="device-width" height="650px">
+			</div>
+			<!--Destinations-->
+			<div class="container" id="Destinations">
+				<legend>Our Destinations</legend>
+				<div class="row">
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/cardiff2.jpg" alt="logo">						
+							<div class="caption">
+								<h3>
+									Cardiff
+								</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
+								</p>
+							</div>
+						</div>
+					</div>
+				
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/edinburgh4.jpg" alt="logo">						
+							<div class="caption">
+								<h3>
+									Edinburgh
+								</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
+								</p>
+							</div>
+						</div>
+					</div>
+				
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/london2.jpg" alt="logo">						
+							<div class="caption">
+								<h3>
+									London
+								</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--End of Destinations-->
 
-				<address class="rightFloat">
-					<strong>John Occune</strong><br>
-					CEO<br>
-					Reserve the World<br>
-					Sri Lanka<br>
-					<a href="mailto:johnoccune@rtw.com">johnoccune@rwt.com</a>
-				</address>
+			<!--About us-->
+
+			<!--end of about us-->
+
+		</main>
+	<!--############################################-->
+		<!--Footer elements-->
+		<footer>
+			<div>
+				<!--Footer navigation bar-->
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<ul class="list-inline">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li class="footer-menu-divider">&sdot;</li>
+								<li>
+									<a href="#">Destinations</a>
+								</li>
+								<li class="footer-menu-divider">&sdot;</li>
+								<li>
+									<a href="#">About Us</a>
+								</li>
+								<li class="footer-menu-divider">&sdot;</li>
+								<li>
+									<a href="#">Contact Us</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<!-- Address and COntact details-->
+				<div class="container">
+					<div  class="leftFloat">
+						<address>
+							<strong>Reserve the World</strong><br>
+							1004 World Trade Centre<br>
+							Colombo 01<br>
+							Sri Lanka<br>
+							<abbr title="Phone">P:<a href="tel:+94112654534">(011) 2 654534</a></abbr><br>
+							<abbr title="Fax">F:<a href="tel:+94112654533">(011) 2 654533</a></abbr><br>
+							<abbr title="Mail"><a href="mailto:res@rtw.com">res@rtw.com</a></abbr>
+						</address>
+					</div>
+					<div class="rightFloat">
+						<address>
+							<strong>John Occune</strong><br>
+							CEO<br>
+							Reserve the World<br>
+							Sri Lanka<br>
+							<a href="mailto:jo@rtw.com">jo@rtw.com</a>
+						</address>
+					</div>
+				</div>
 			</div>
 		</footer>
-
-		<!--#####################################################################################################################-->
-		
-		<script type="text/javascript" src="scripts/jquery-3.1.0.min.js"></script>
-		<script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	<!--############################################-->
+		<script src="scripts/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
