About us : temporary

--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -27,12 +27,12 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li>
 								<a href="#">
-									Destinations
+									About Us
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									About Us
+									Destinations
 								</a>
 							</li>
 							<li>
@@ -43,22 +43,92 @@
 							</li>
 							<li>
 								<a href="#"><span class="glyphicon glyphicon-user"></span> Signup</a>
-							</li>
-							<li>
-								<a href="accounts.google.com">
-									Google+
-								</a>
-							</li>
+							</li>							
 						</ul>
 					</div>
 				</div>
 			</nav>
 		</header>
 	<!--############################################-->
-		<main>
+		<main>			
 			<div class="container">
 				<img src="pics/hello.jpg" width="device-width" height="650px">
 			</div>
+
+			<!--About us-->
+			<div>
+				<div class="container">
+						<div class="row">
+						<legend>About Us</legend>
+							<div class="col-sm-8">
+							
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cardiffs efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
+								</p>
+							</div>
+							<div class="container col-sm-4">
+								<img class="img-responsive" src="pics/travel.jpg" alt="logo" width="300px" height="150px" align="right">		
+							</div>
+						</div>
+				</div>
+				<div class="container">
+					<blockquote class="pull-right">
+						<p>Morbi nec accumsan turpis, nec accumsan mauris. Aliquam erat volutpat. Vestibulum sodales lorem et gravida varius. Quisque pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non.</p>
+						<small>Developer of RSS, <cite title="Source Title">Dave Winer</cite>
+						</small>
+					</blockquote>
+				</div>
+			</div>
+
+   <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
+                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.que pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non.</p>
+						<small>Developer of RSS</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive ing-rounded" src="pics/hello.jpg" alt="">
+                </div>
+            </div>
+
+</div>
+				<a  name="contact"></a>
+    <div class="banner">
+
+      <div class="container">
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Connect to Start Bootstrap:</h2>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+</div>
+			<!--end of about us-->
+
 			<!--Destinations-->
 			<div class="container" id="Destinations">
 				<legend>Our Destinations</legend>
@@ -106,12 +176,7 @@
 					</div>
 				</div>
 			</div>
-			<!--End of Destinations-->
-
-			<!--About us-->
-
-			<!--end of about us-->
-
+			<!--End of Destinations-->			
 		</main>
 	<!--############################################-->
 		<!--Footer elements-->
