--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -50,19 +50,71 @@
 			</nav>
 		</header>
 	<!--############################################-->
-		<main>			
+		<main>
+
+			<!--Casaroul element-->
 			<div class="container">
-				<img src="pics/hello.jpg" width="device-width" height="650px">
+  				<br>
+  				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    				<!-- Indicators -->
+    				<ol class="carousel-indicators">
+      					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      					<li data-target="#myCarousel" data-slide-to="1"></li>
+      					<li data-target="#myCarousel" data-slide-to="2"></li>      				
+    				</ol>
+
+    				<!-- Wrapper for slides -->
+    				<div class="carousel-inner" role="listbox">
+
+      					<div class="item active">
+        					<img src="pics/Bus.jpg" alt="Chania">
+        						<div class="carousel-caption">
+          							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        						</div>
+      					</div>
+
+      					<div class="item">
+        					<img src="pics/train.jpg" alt="Chania">
+        						<div class="carousel-caption">          
+          							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        						</div>
+      					</div>
+    
+      					<div class="item">
+        					<img src="pics/bus2.jpg" alt="Flower">
+        					<div class="carousel-caption">          
+          						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        					</div>
+      					</div>
+
+	      			</div>
+
+
+    				<!-- Left and right controls -->
+    				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      					<span class="sr-only">Previous</span>
+    				</a>
+    				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      					<span class="sr-only">Next</span>
+    				</a>
+	  			</div>
 			</div>
+
+			<form class="container">
+				<input type="text" name="id">
+			</form>
+			
 
 			<!--About us-->
 			<div>
 				<div class="container">
-						<div class="row">
+						<div class="row container">
 						<legend>About Us</legend>
 							<div class="col-sm-8">
 							
-								<p>
+								<p class="lead">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cardiffs efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
 								</p>
@@ -81,52 +133,7 @@
 				</div>
 			</div>
 
-   <div class="content-section-a">
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.que pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non.</p>
-						<small>Developer of RSS</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive ing-rounded" src="pics/hello.jpg" alt="">
-                </div>
-            </div>
-
-</div>
-				<a  name="contact"></a>
-    <div class="banner">
-
-      <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-</div>
 			<!--end of about us-->
 
 			<!--Destinations-->
@@ -140,7 +147,7 @@
 								<h3>
 									Cardiff
 								</h3>
-								<p>
+								<p class="lead">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
 								</p>
 							</div>
@@ -154,7 +161,7 @@
 								<h3>
 									Edinburgh
 								</h3>
-								<p>
+								<p class="lead">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
 								</p>
 							</div>
@@ -168,7 +175,7 @@
 								<h3>
 									London
 								</h3>
-								<p>
+								<p class="lead">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
 								</p>
 							</div>
@@ -186,7 +193,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<ul class="list-inline">
+							<ul class="list-inline lead">
 								<li>
 									<a href="index.html">Home</a>
 								</li>
