--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -27,17 +27,17 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li>
-								<a href="#">
+								<a href="#about">
 									About Us
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="#dest">
 									Destinations
 								</a>
 							</li>
 							<li>
-								<a href="#"><span class="glyphicon glyphicon-phone"></span> Contact Us</a>
+								<a href="#contact"><span class="glyphicon glyphicon-phone"></span> Contact Us</a>
 							</li>
 							<li>
 								<a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
@@ -105,7 +105,7 @@
 			<br>
 			<!--End of Carousel element-->
 			
-			<div>
+			<div class="container">
 			<!--Reservation Form-->
 			<div class="col-sm-5">
 				<div class="well">
@@ -179,41 +179,72 @@
 				</div>
 			</div>
 			<!--end of reservation form-->
+			<!--the side introduction-->
+			<div class="col-sm-7 aboutBack container">
+				<legend>
+					<h1>Reserve the World<br><small>-Transport Reservation System</small></h1>
+				</legend>
+				<p class="lead">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				</p>
+			</div>
+			<!--end of side introduction-->
 			</div>
 			
 
 			<!--About us-->
-			<div>
-				<div class="container">
-						<div class="row container">
-						<legend>About Us</legend>
-							<div class="col-sm-7">
-							
-								<p class="lead">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. Cardiffs efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem. Nulla facilisi. Aliquam varius congue ante at aliquam. Aenean ut elementum massa, id lobortis nunc.
-								</p>
-							</div>
-							<div class="container col-sm-4">
-								<img class="img-responsive" src="pics/travel.jpg" alt="logo" width="300px" height="150px" align="right">		
-							</div>
-						</div>
+			<div id="about">
+			<div class="container bodyBack">
+				<legend>
+					<h2>Best-Services</h2>
+				</legend>
+				<div class="col-sm-7">
+					<p class="lead">
+					c accumsan turpis, nec accumsan mauris. Aliquam erat volutpat. Vestibulum sodales lorem et gravida varius. Quisque pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non ollicitudin. Cras efficitur, ante non porta aliquam, tellus ex ornare lacus, ut fringilla mi ligula quis dui. Integer efficitur congue elementum. Nullam id dictum urna. Aenean tincidunt, odio porttitor pulvinar maximus, purus purus maximus lectus, commodo rhoncus mi tellus id lorem.
+					</p>
 				</div>
-				<div class="container">
-					<blockquote class="pull-right">
-						<p>Morbi nec accumsan turpis, nec accumsan mauris. Aliquam erat volutpat. Vestibulum sodales lorem et gravida varius. Quisque pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non.</p>
-						<small>Developer of RSS, <cite title="Source Title">Dave Winer</cite>
-						</small>
-					</blockquote>
+				<div class="col-sm-5">
+					<img src="pics/traveller2.JPG" alt="logo" width="350px" height="350px">
 				</div>
+			</div>
+
+			<div class="container">
+				<legend><h2>No-Queue</h2></legend>
+				<div class="col-sm-8">
+					<img src="pics/queue1.jpg" alt="logo" width="700px" height="350px">
+				</div>
+				<div class="col-sm-4">
+					<p class="lead">
+					c accumsan turpis, nec accumsan mauris. Aliquam erat volutpat. Vestibulum sodales lorem et gravida varius. Quisque pellentesque cursus augue at finibus. Nam pharetra massa non congue posuere. Phasellus at ligula sed orci sollicitudin placerat. Donec pretium scelerisque velit, et vulputate turpis bibendum non ollicitudin.
+					</p>
+				</div>
+			</div>
+			<div class="container">
+				<legend>
+					<h2>Totally-Enjoyable</h2>
+				</legend>
+				<div class="col-sm-5">
+					<img src="pics/enjoy2.jpg" alt="logo" width="430px" height="350px">
+				</div>
+				
+				<div class="col-sm-5">
+					<img src="pics/enjoy.JPG" alt="logo" width="430px" height="350px">
+				</div>
+				<div class="col-sm-2">
+					<p class="lead">
+					c accumsan turpis, nec accumsan mauris. Aliquam erat volutpat. Vestibulum sodales lorem et gravida varius. Quisque pellentesque cursus augue at finibus.
+					</p>
+				</div>
+			</div>
+
 			</div>
 
 
 			<!--end of about us-->
 
 			<!--Destinations-->
-			<div class="container" id="Destinations">
-				<legend>Our Destinations</legend>
+			<div class="container" id="dest">
+				<legend><h2>Our Destinations</h2></legend>
 				<div class="row">
 					<div class="col-sm-6 col-md-4">
 						<div class="thumbnail">
@@ -258,11 +289,144 @@
 					</div>
 				</div>
 			</div>
-			<!--End of Destinations-->			
+			<!--End of Destinations-->
+
+			<!--Prices-->
+			<div class="container" id="prices">
+				<legend>
+					Prices
+				</legend>
+				<table class="table table-bordered table-hover">
+					<thead>
+						<tr>
+							<th>
+								Source
+							</th>
+							<th>
+								Destination
+							</th>
+							<th>
+								Train Prices(1 person)
+							</th>
+							<th>
+								Bus Prices(1 person)
+							</th>
+							<th>
+								Class
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								London
+							</td>
+							<td>
+								Cardiff
+							</td>
+							<td>
+								10 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								20 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								First class
+							</td>
+						</tr>
+						<tr>
+							<td>
+								London
+							</td>
+							<td>
+								Cardiff
+							</td>
+							<td>
+								7 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								14 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								Second class
+							</td>
+						</tr>
+						<tr>
+							<td>
+								London
+							</td>
+							<td>
+								Edinburgh
+							</td>
+							<td>
+								30 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								35 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								First class
+							</td>
+						</tr>
+						<tr>
+							<td>
+								London
+							</td>
+							<td>
+								Edinburgh
+							</td>
+							<td>
+								25 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								20 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								Second class
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Cardiff
+							</td>
+							<td>
+								Edinburgh
+							</td>
+							<td>
+								40 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								30 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								First class
+							</td>
+						</tr>
+						<tr>
+							<td>
+								London
+							</td>
+							<td>
+								Cardiff
+							</td>
+							<td>
+								30 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								28 <span class="glyphicon glyphicon-euro"></span>
+							</td>
+							<td>
+								Second class
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<!--end of prices-->			
 		</main>
 	<!--############################################-->
 		<!--Footer elements-->
-		<footer>
+		<footer id="contact">
 			<div>
 				<!--Footer navigation bar-->
 				<div class="container">
