--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -208,7 +208,7 @@
 				</div>
 			</div>
 
-			<div class="container">
+			<div class="container bodyBack">
 				<legend><h2>No-Queue</h2></legend>
 				<div class="col-sm-8">
 					<img src="pics/queue1.jpg" alt="logo" width="700px" height="350px">
@@ -219,7 +219,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container bodyBack">
 				<legend>
 					<h2>Totally-Enjoyable</h2>
 				</legend>
