--- a/Transport_Reservation/login.html
+++ b/Transport_Reservation/login.html
@@ -9,59 +9,14 @@
 	<link href="styles/review.css" rel="stylesheet">
 	<title>Login - Reserve the World</title>
 </head>
-<body>
-	<header>
-		<nav class="navbar navbar-default topnav" role="navigation">
-				<div class="container topnav">
-				<!--header of the Navigation bar-->
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        					<span class="icon-bar"></span>
-       						<span class="icon-bar"></span>
-        					<span class="icon-bar"></span>
-        					<span class="icon-bar"></span>
-        					<span class="icon-bar"></span>                        
-      					</button>
-						<a class="navbar-brand topnav" href="index.html">
-							<div class="row">
-								<img src="pics/logo.svg" alt="logo" width="35px" height="30px"> Reserve the World
-							</div>
-						</a>						
-					</div>
-				<!--next elements of the navigation bar-->
-					<div class="collapse navbar-collapse" id="myNavbar">
-						<ul class="nav navbar-nav navbar-right">
-							<li>
-								<a href="index.html#about">
-									About Us
-								</a>
-							</li>
-							<li>
-								<a href="index.html#dest">
-									Destinations
-								</a>
-							</li>
-							<li>
-								<a href="#contact"><span class="glyphicon glyphicon-phone"></span> Contact Us</a>
-							</li>
-							<li>
-								<a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a>
-							</li>
-							<li>
-								<a href="#"><span class="glyphicon glyphicon-user"></span> Signup</a>
-							</li>							
-						</ul>
-					</div>
-				</div>
-			</nav>
-	</header>
-	<main  class="loginPG">
-		<div class="container">
+<body class="container" style="background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33))">
 
-			<div class="container col-md-offset-3" align="center">
-				<div class="col-sm-6">
+		
+
+			<div class="col-md-offset-4" align="center">
+				<div class="col-sm-6 formStyle">
 					<div class="well">
-						<legend class="lead text-center">Login</legend>
+						<img id="profile-img" class="profile-img-card img-circle" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png" />
 						<form class="form-horizontal">
 						
 							<div class="form-group">
@@ -108,74 +63,7 @@
 						</form>
 					</div>
 				</div>
-			
-	</main><br>
-		<!--Footer elements-->
-		<footer id="contact">
-			<div>
-				<!--Footer navigation bar-->
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12">
-							<ul class="list-inline lead">
-								<li>
-									<a href="index.html">Home</a>
-								</li>
-								<li class="footer-menu-divider">&sdot;</li>
-								<li>
-									<a href="#dest">Destinations</a>
-								</li>
-								<li class="footer-menu-divider">&sdot;</li>
-								<li>
-									<a href="#about">About Us</a>
-								</li>
-								<li class="footer-menu-divider">&sdot;</li>
-								<li>
-									<a href="#contact">Contact Us</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
 
-				<!-- Address and COntact details-->
-				<div class="container">
-					<div  class="leftFloat col-sm-3">
-						<legend>Contacts</legend>
-						<address>
-							<strong>Reserve the World</strong><br>
-							1004 World Trade Centre<br>
-							Colombo 01<br>
-							Sri Lanka<br>
-							<abbr title="Phone">P:<a href="tel:+94112654534">(011) 2 654534</a></abbr><br>
-							<abbr title="Fax">F:<a href="tel:+94112654533">(011) 2 654533</a></abbr><br>
-							<abbr title="Mail"><a href="mailto:res@rtw.com">res@rtw.com</a></abbr>
-						</address>
-					</div>
-					<div class="col-sm-4">
-						<div>
-						<legend>Visit Us On</legend>
-						
-							<div class="btn-group-verticle">
-								<a href="https://www.facebook.com" class="btn btn-primary"><span class="fa fa-facebook-square"></span> Facebook</a>
-								<a href="https://accounts.google.com" class="btn btn-danger"><span class="fa fa-google-plus-square"> Google+</a>
-								<a href="https://twitter.com/" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>							
-							</div>
-						</div>
-					</div>
-					<div class="rightFloat col-sm-3">
-						<legend>Administration</legend>
-						<address>
-							<strong>John Occune</strong><br>
-							CEO<br>
-							Reserve the World<br>
-							Sri Lanka<br>
-							<a href="mailto:jo@rtw.com">jo@rtw.com</a>
-						</address>
-					</div>
-				</div>
-			</div>
-		</footer>
 	<script src="scripts/jquery-3.1.0.min.js" type="text/javascript"></script>
 	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
