final for today

--- a/Transport_Reservation/login.html
+++ b/Transport_Reservation/login.html
@@ -8,8 +8,14 @@
 	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/font-awesome.min.css" rel="stylesheet">
 	<link href="styles/review.css" rel="stylesheet">
 	<title>Login - Reserve the World</title>
+	<style type="text/css">
+		body nextclass{
+			background-image: url(../pics/login.jpeg);
+			background-repeat: false;
+		}
+	</style>
 </head>
-<body class="container" style="background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33))">
+<body class="container nextclass" style="background-image:url("")>
 
 		
 
