--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -50,7 +50,7 @@
 								<a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a>
 							</li>
 							<li>
-								<a href="#"><span class="glyphicon glyphicon-user"></span> Signup</a>
+								<a href="signup.html"><span class="glyphicon glyphicon-user"></span> Signup</a>
 							</li>							
 						</ul>
 					</div>
