result page - editing

--- a/Transport_Reservation/index.html
+++ b/Transport_Reservation/index.html
@@ -176,10 +176,12 @@
 							</div>							
 						</div>
 						<div class="form-group">
-							<div class="row">			
-								<button class="btn btn-primary center-block" type="submit">
+							<div class="row">
+							 <a href="result.html">			
+								<button class="btn btn-success center-block" type="button">
 											Search		
 								</button>
+							</a>
 							</div>					
 						</div>
 					</form>
