Search Page - Final

--- a/Transport_Reservation/result.html
+++ b/Transport_Reservation/result.html
@@ -197,13 +197,48 @@
 				</table>				
 			</div>
 
-			
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/adv2.jpg" alt="logo">						
+							<div class="caption">
+								<p class="lead">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin.
+								</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/adv1.jpg" alt="logo">						
+							<div class="caption">
+								<p class="lead">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin.
+								</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<img src="pics/adv3.jpg" alt="logo">						
+							<div class="caption">
+								<p class="lead">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus congue lorem vel sollicitudin. 
+								</p>
+							</div>
+						</div>
+					</div>				
+			</div>
+		</div>
 
 
 		</main>
 
 		<!--Footer elements-->
-		<footer id="contact" class="visible-desktop">
+		<footer id="contact">
 			<div>
 				<!--Footer navigation bar-->
 				<div class="container">
